2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  tody up and add some comments regarding HTML_DIR.

	* gtkdoc-fixxref.in:
	  HTML_DIR is not neccesarily set.

	* gtkdoc-mkhtml.in:
	  Fix uninstalled.

	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs/tester-docs.xml:
	  Add more chapter id's and experiment with an index chapter.	  

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* style.css:
	  Improve spacing on indicies and glossaries.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* tests/bugs/docs/tester-docs.xml:
	* tests/gobject/docs/tester-docs.xml:
	* tests/gobject/docs/tester-sections.txt:
	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs-tmpl/tester-sections.txt:
	* tests/gobject/src/gobject.c:
	* tests/gobject/src/gobject.h:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Add some index lists to the tests. Add a deprecated function.

2008-06-02  Stefan Kost  <ensonic@users.sf.net>

	patch by: Felix Riemann <friemann@svn.gnome.org>

	* gtk-doc.xsl:
	* style.css:
	  Produce valid html. Fixes #534627.

2008-05-23  Stefan Kost  <ensonic@users.sf.net>

	* configure.in:
	* tests/gobject/Makefile.am:
	* tests/gobject/docs-tmpl/Makefile.am:
	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs-tmpl/tester-sections.txt:
	* tests/gobject/docs-tmpl/tester.types:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Build same docs once again with old tmpl approach.

2008-05-23  Stefan Kost  <ensonic@users.sf.net>

	* tests/bugs/docs/Makefile.am:
	* tests/gobject/docs/Makefile.am:
	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Sync names.

2008-05-08  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-mktmpl.in:
	  Fix a long standing bug that killed spaces in tmpl files.

2008-05-05  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Fix regexps changes from previous commit. When using /e the
	  replacement part has to be a perl snippet.
