@@ -5,6 +5,7 @@ GtkdocObject
 GtkdocObjectClass
 gtkdoc_object_new
 gtkdoc_object_set_otest
+gtkdoc_object_frobnicate
 GTKDOC_OBJECT_MACRO_DUMMY
 GTKDOC_OBJECT_MACRO_SUM
 <SUBSECTION Standard>
