@@ -37,6 +37,12 @@
     <index id="deprecated-api-index" role="deprecated">
       <title>Index of deprecated API</title>
     </index>
+    <index id="api-index-0-1" role="0.1">
+      <title>Index of new API in 0.1</title>
+    </index>
+    <index id="api-index-0-5" role="0.5">
+      <title>Index of new API in 0.5</title>
+    </index>
   <!--/chapter-->
 
   <glossary>
