@@ -57,6 +57,7 @@ GType  gtkdoc_object_get_type(void) G_GNUC_CONST;
 
 GtkdocObject *gtkdoc_object_new(void);
 void gtkdoc_object_set_otest (GObject *self, const gchar *value);
+void gtkdoc_object_frobnicate (GObject *self, gint n);
 
 /**
  * GTKDOC_OBJECT_MACRO_DUMMY:
