@@ -1,5 +1,16 @@
 2008-06-02  Stefan Kost  <ensonic@users.sf.net>
 
+	* tests/gobject/docs-tmpl/tester-docs.xml:
+	* tests/gobject/docs-tmpl/tester-sections.txt:
+	* tests/gobject/docs/tester-docs.xml:
+	* tests/gobject/docs/tester-sections.txt:
+	* tests/gobject/src/giface.c:
+	* tests/gobject/src/gobject.c:
+	* tests/gobject/src/gobject.h:
+	  Add some since: tags for the tests too.
+
+2008-06-02  Stefan Kost  <ensonic@users.sf.net>
+
 	* TODO:
 	  tody up and add some comments regarding HTML_DIR.
 
